deploy/rollouts/base/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo
  labels:
    istio-injection: "enabled"
