deploy/rollouts/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-stable
  namespace: echo
spec:
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-canary
  namespace: echo
spec:
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 8080
